Fix easyms-messaging tests !